@@ -1,3 +1,9 @@
+2013-08-24 Romain Francois <romain@r-enthusiasts.com>
+
+        * include/RcppArmadilloExtensions/sample.h: added include guard, made 
+        functions SampleReplace, etc ... templates to avoid the multiple definitions
+        problem
+
 2013-08-21 Romain Francois <romain@r-enthusiasts.com>
 
         * include/RcppArmadilloWrap.h: Less data copies for wrap< SpMat<T> >
